--- a/webpage/songcho.html
+++ b/webpage/songcho.html
@@ -119,7 +119,7 @@
 		
 		//--------------------------------------
 		// Load PointCloud
-		Potree.loadPointCloud("../pointclouds/songcho/metadata.json", "songcho", async e => {
+		Potree.loadPointCloud("https://nxwt-my.sharepoint.com/:u:/g/personal/huynhphantuyson_nxwt_onmicrosoft_com/EU7486f_TAlEmj8LsTUWnaEBqNMGoITXWjHnXP3SikZ29g?e=ok4jmM", "songcho", async e => {
 			let pointcloud = e.pointcloud;
 			let scene = viewer.scene;
 			let material = pointcloud.material;
